# taios

macos-client/: CMakeLists.txt  README.md  TESTING.md  TESTING_QUICK_START.md
macos-client/TelegramClient/Alerts/: AlertManager.swift
macos-client/TelegramClient/Auth/: AuthenticationManager.swift
macos-client/TelegramClient/Bridge/: TdBridge-Bridging-Header.h  TdBridge.cpp  TdBridge.h
macos-client/TelegramClient/Chat/: ChatManager.swift
macos-client/TelegramClient/Config/: TdConfig.swift
macos-client/TelegramClient/Core/: TelegramClientManager.swift
macos-client/TelegramClient/Database/: DatabaseManager.swift
macos-client/TelegramClient/Message/: MessageManager.swift
macos-client/TelegramClient/Signals/: DetectionEngine.swift  SignalDefinition.swift
macos-client/TelegramClient/Updates/: UpdateStreamHandler.swift
macos-client/TelegramMacOS/App/: TelegramApp.swift
macos-client/TelegramMacOS/Views/: MainWindow.swift
macos-client/Tests/: CMakeLists.txt  DatabaseManagerTests.swift  ManagersTests.swift  TelegramClientManagerTests.swift
