# Tests for TelegramMacOS Client
# This file enables unit testing for the project

# For now, we'll add test targets as we develop them
# Tests will be added incrementally with each phase

# Example of adding a test:
# add_executable(test_telegram_client test.cpp)
# target_link_libraries(test_telegram_client PRIVATE TdBridge)
# add_test(NAME test_telegram_client COMMAND test_telegram_client)
